Source/JavaScriptCore/runtime/MapData.h
@@ -44,7 +44,7 @@ public:
         const WTF::KeyValuePair<JSValue, JSValue> operator*() const;
         JSValue key() const { ASSERT(!atEnd()); return m_mapData->m_entries[m_index].key.get(); }
         JSValue value() const { ASSERT(!atEnd()); return m_mapData->m_entries[m_index].value.get(); }
-        void operator++();
+        void operator++() { ASSERT(!atEnd()); internalIncrement(); }
         static const_iterator end(const MapData*);
         bool operator!=(const const_iterator& other);
         bool operator==(const const_iterator& other);
@@ -56,6 +56,7 @@ public:
         // We need this in order to keep the common case (eg. iter != end())
         // fast.
         bool atEnd() const { return static_cast<size_t>(m_index) >= static_cast<size_t>(m_mapData->m_size); }
+        void internalIncrement();
         const MapData* m_mapData;
         int32_t m_index;
     };
@@ -166,9 +167,8 @@ ALWAYS_INLINE MapData::KeyType::KeyType(JSValue v)
         value = jsNumber(i);
 }
 
-ALWAYS_INLINE void MapData::const_iterator::operator++()
+ALWAYS_INLINE void MapData::const_iterator::internalIncrement()
 {
-    ASSERT(!atEnd());
     Entry* entries = m_mapData->m_entries;
     size_t index = m_index + 1;
     size_t end = m_mapData->m_size;
@@ -179,9 +179,9 @@ ALWAYS_INLINE void MapData::const_iterator::operator++()
 
 ALWAYS_INLINE MapData::const_iterator::const_iterator(const MapData* mapData)
     : m_mapData(mapData)
-    , m_index(0)
+    , m_index(-1)
 {
-    m_mapData->m_iteratorCount++;
+    internalIncrement();
 }
 
 ALWAYS_INLINE MapData::const_iterator::~const_iterator()
